examples/tests/compile_fail/defer_in_loop_fail.zl
fun main() >> i32 {
    for i32 i = 0; i < 2; i++ {
        defer @printf("%d\n", i);
    }
    return 0;
}
